--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  }
-
-body {
-  font-family: 'Fira Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
 
+body {
+    font-family: 'Fira Sans', sans-serif;
+}
+
+/*---------------------nav-bar-------------------*/
+
 .background-to-nav {
-  background-color: #696969;
-  position: fixed;
-  width: 100%;
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    background-color: #696969;
 }
 
 .menu {
-  list-style-type: none;
-  letter-spacing: 3px;
-  margin-top: 10px;
+    list-style-type: none;
+    letter-spacing: 3px;
+    margin-top: 15px;
 }
 
 .menu li {
-  float: left;
-  margin-left: 40px;
+    float: left;
+    margin-left: 40px;
 }
 
 .menu li a {
-  color: #fff;
+    color: #fff;
+}
+
+/*---------------------footer-------------------*/
+
+.social-networks {
+  text-align: center;
+}
+
+.social-networks li{
+  display: inline;
+}
+
+.social-networks i {
+  font-size: 160%;
+  margin: 1%;
+  padding: 5%;
+  color: #696969;
 }
