--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
     width: 100%;
     height: 50px;
     background-color: #696969;
+    z-index: 1;
 }
 
 .menu {
@@ -46,15 +47,35 @@ body {
 /*---------------------Hero image-------------------*/
 
 .hero-image {
-    position: fixed;
-    top: 50px;
+    position: absolute;
     width: 100%;
+    z-index: -1;
 }
 
 .bell_tower {
-    position: relative;
-    background-size: cover;
     width: 100%;
+    min-height: 100vh;
+    z-index: -1;
+}
+
+#overlay {
+  position: fixed; /* Sit on top of the page content */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+  z-index: 0; /* Specify a stack order in case you're using a different order for other elements */
+}
+/*---------------------Jumbotron-------------------*/
+
+.jumbotron {
+    position: fixed;
+    top: 20%;
+    left: 10%;
+    color: #fafafa;
 }
 
 /*---------------------footer-------------------*/
