--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body {
     width: 100%;
     height: 50px;
     background-color: #696969;
-    z-index: 1;
+    z-index: 10;
 }
 
 .menu {
@@ -44,38 +44,52 @@ body {
     text-decoration: underline;
 }
 
+/*---------------------Misc-------------------*/
+
+
+
 /*---------------------Hero image-------------------*/
+
+#overlay {
+    position: absolute;
+    background-attachment: cover;
+    background-color: rgba(0,0,0,0.7);
+    width: 100%;
+    height: 100%;
+    top: 50px;
+    left: 0;
+    right: 0;
+    bottom: 50px;
+    z-index: 3; 
+}
 
 .hero-image {
     position: absolute;
+    background-attachment: cover;
     width: 100%;
-    z-index: -1;
+    height: 100vh;
+    bottom:0;
+    z-index: 1;
 }
 
 .bell_tower {
-    width: 100%;
-    min-height: 100vh;
-    z-index: -1;
+    max-height: 100vh;
+    bottom:0;
 }
 
-#overlay {
-  position: fixed; /* Sit on top of the page content */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-  z-index: 0; /* Specify a stack order in case you're using a different order for other elements */
-}
 /*---------------------Jumbotron-------------------*/
 
 .jumbotron {
     position: fixed;
     top: 20%;
-    left: 10%;
+    left: 5%;
+    right: 5%;
     color: #fafafa;
+    z-index: 10;
+}
+
+hr:not([size]) {
+    height: 0;
 }
 
 /*---------------------footer-------------------*/
@@ -87,6 +101,7 @@ body {
   width: 100%;
   margin: 0;
   background-color: #696969;
+  z-index: 10;
 }
 
 .social-networks li{
