--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,32 +49,26 @@ body {
 
 
 /*---------------------Hero image-------------------*/
-
-#overlay {
-    position: absolute;
-    background-attachment: cover;
-    background-color: rgba(0,0,0,0.7);
+.opaque-overlay {
+    background-color:rgba(0, 0, 0, 0.7);
+    position: absolute; 
+    background-position: center;
+    background-size: cover;
     width: 100%;
     height: 100%;
     top: 50px;
-    left: 0;
-    right: 0;
     bottom: 50px;
-    z-index: 3; 
+    z-index: 10;
 }
 
 .hero-image {
-    position: absolute;
-    background-attachment: cover;
+    background: url("../images/Alverstoke5.jpg") top left no-repeat;
+    position: absolute; 
+    background-position: center;
+    background-size: cover;
     width: 100%;
-    height: 100vh;
-    bottom:0;
-    z-index: 1;
-}
-
-.bell_tower {
-    max-height: 100vh;
-    bottom:0;
+    height: 100%;
+    z-index: 5;
 }
 
 /*---------------------Jumbotron-------------------*/
@@ -86,6 +80,36 @@ body {
     right: 5%;
     color: #fafafa;
     z-index: 10;
+}    
+
+@media screen and (min-width: 992px) {
+    .jumbotron {
+        font-size: large;    
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .jumbotron {
+        font-size: medium;    
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .jumbotron {
+        font-size: small;    
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .jumbotron {
+        font-size: x-small;    
+    }
+}
+
+
+
+.lead {
+    font-size: x-large;
 }
 
 hr:not([size]) {
