On all html pages, mobile navbar amended to have active class on top bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,12 @@ body {
     border: none;
 }
 
+.dropdown-item {
+    color: #fafafa;
+    background-color: #696969;
+    z-index: 20;
+}
+
 /*---------------------Misc-------------------*/
 
 
