--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ body {
     width: 100%;
     height: 90%;
     top: 50px;
-    z-index: 10;
+    z-index: 9;
 }
 
 .hero-image {
@@ -174,4 +174,29 @@ hr:not([size]) {
   padding: 0;
   color: #fff;
   float: right;
+}
+
+
+/*-------------------- Gallery --------------------*/
+
+.gallery-pics {
+    line-height: 0;
+    column-gap: 0px;
+    padding-top: 50px;
+    }
+
+.image {
+    width: 100%;
+}
+
+@media screen and (max-width: 992px) {
+    .gallery-pics {
+        column-count: 2;    
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .gallery-pics {
+        column-count: 3;    
+    }
 }
