--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ body {
 }
 
 .hero-image {
-    background: url("../images/Alverstoke5.jpg") top left no-repeat;
+    background: url("../images/alverstoke5.jpg") top left no-repeat;
     position: absolute; 
     background-position: center;
     background-size: cover;
@@ -199,4 +199,102 @@ hr:not([size]) {
     .gallery-pics {
         column-count: 3;    
     }
+}
+
+/*-------------------- Gallery Test --------------------*/
+
+.text-center {
+    margin-top: 10px
+}
+
+.gallery-image {
+    height: 30vh;
+    margin: 10px 0 10px 0;
+    border-radius: 25%;
+}
+
+/*-------------------- about --------------------*/
+
+.container {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  width: 100vw;
+  height: 100vh;
+  padding-top: 55px;
+  padding-bottom: 55px;
+  @media screen and (max-width: 60em) {
+    grid-template-rows: repeat(4, 1fr);
+  }
+}
+
+.grid-1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row: 1;
+  @media screen and (max-width: 60em) {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row: 1;
+  }
+}
+
+.grid-2 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row: 1;
+  @media screen and (max-width: 60em) {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row: 2;
+  }
+}
+
+.grid-3 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row: 2;
+  @media screen and (max-width: 60em) {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row: 3;
+  }
+}
+
+.grid-4 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row: 2;
+  @media screen and (max-width: 60em) {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row: 4;
+  }
+}
+
+.grid-5 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row: 3;
+  @media screen and (max-width: 60em) {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row: 4;
+  }
+}
+
+.grid-6 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row: 3;
+  @media screen and (max-width: 60em) {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row: 4;
+  }
+}
+
+.grid-pic {
+    width: 100%;
+    border-radius: 10%;
 }
