--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,23 +215,23 @@ hr:not([size]) {
 
 /*-------------------- about --------------------*/
 
-.container {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: repeat(4, 1fr);
-  width: 100vw;
-  height: 100vh;
-  padding-top: 55px;
-  padding-bottom: 55px;
+/*.container {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    width: 100vw;
+    height: 100vh;
+    padding-top: 55px;
+    padding-bottom: 55px;
   @media screen and (max-width: 60em) {
     grid-template-rows: repeat(4, 1fr);
   }
 }
 
 .grid-1 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row: 1;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row: 1;
   @media screen and (max-width: 60em) {
     grid-column-start: 1;
     grid-column-end: 5;
@@ -240,9 +240,9 @@ hr:not([size]) {
 }
 
 .grid-2 {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row: 1;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row: 1;
   @media screen and (max-width: 60em) {
     grid-column-start: 1;
     grid-column-end: 5;
@@ -251,9 +251,9 @@ hr:not([size]) {
 }
 
 .grid-3 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row: 2;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row: 2;
   @media screen and (max-width: 60em) {
     grid-column-start: 1;
     grid-column-end: 5;
@@ -262,39 +262,46 @@ hr:not([size]) {
 }
 
 .grid-4 {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row: 2;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row: 2;
   @media screen and (max-width: 60em) {
     grid-column-start: 1;
     grid-column-end: 5;
     grid-row: 4;
   }
-}
+}*/
 
-.grid-5 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row: 3;
-  @media screen and (max-width: 60em) {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row: 4;
-  }
-}
-
-.grid-6 {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row: 3;
-  @media screen and (max-width: 60em) {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row: 4;
-  }
-}
-
-.grid-pic {
+.row {
     width: 100%;
+    height: 100%;
+    margin:0;
+}
+
+.column-1 {
+    width:66%;
+    height:100vh;
+    margin-top: 50px;
+    margin-bottom: 65px;
+    background-color: turquoise;
+}
+
+.column-2 {
+    width:34%;
+    height:100vh;
+    margin-top: 50px;
+    margin-bottom: 65px;
+    background-color: red;
+}
+
+
+
+/*.grid-pic {
+    width: 50vh;
     border-radius: 10%;
 }
+
+.vertical-line {
+    border-left: thick solid #ff0000;
+    height: 50vh;
+}*/
