--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,13 +180,13 @@ hr:not([size]) {
 /*-------------------- Gallery --------------------*/
 
 .gallery-pics {
-    line-height: 0;
-    column-gap: 0px;
-    padding-top: 50px;
-    }
+    padding: 50px 0 60px 0;
+}
 
 .image {
-    width: 100%;
+    width: 50vh;
+    padding: 10px;
+    border-radius: 10%;
 }
 
 @media screen and (max-width: 992px) {
@@ -201,17 +201,7 @@ hr:not([size]) {
     }
 }
 
-/*-------------------- Gallery Test --------------------*/
 
-.text-center {
-    margin-top: 10px
-}
-
-.gallery-image {
-    height: 30vh;
-    margin: 10px 0 10px 0;
-    border-radius: 25%;
-}
 
 /*-------------------- about --------------------*/
 
@@ -276,6 +266,8 @@ hr:not([size]) {
     width: 100%;
     height: 100%;
     margin:0;
+    --bs-gutter-x: 2rem;
+    --bs-gutter-y: 2rem;
 }
 
 .column-1 {
@@ -286,6 +278,10 @@ hr:not([size]) {
     background-color: turquoise;
 }
 
+.h1, h1 {
+    padding-top: 50px;
+}
+
 .column-2 {
     width:34%;
     height:100vh;
@@ -294,7 +290,16 @@ hr:not([size]) {
     background-color: red;
 }
 
+.about_image {
+    width: 100%;
+    margin-top: 5vh;
+}
 
+
+.col-sm-3 {
+    flex: 0 0 auto;
+    width: 15%;
+}
 
 /*.grid-pic {
     width: 50vh;
@@ -305,3 +310,37 @@ hr:not([size]) {
     border-left: thick solid #ff0000;
     height: 50vh;
 }*/
+
+/*-------------------- Form --------------------*/
+
+.form-header {
+    padding: 100px 10px 0 10px;
+    text-align: center;
+}
+
+.form-h2-header {
+    padding: 30px 10px 50px 10px;
+    text-align: center;
+}
+
+.form-holder{
+    display: block;
+    text-align: center;
+    padding-bottom: 100px;
+}
+
+.form {
+    display: inline-block;
+    text-align: left;
+    width: 60%;
+}
+
+.btn-primary {
+    background-color: #696969;
+    border-color: #696969;
+}
+
+.btn-primary:hover {
+    background-color: #484848;
+    border-color: #484848;
+}
