--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,9 +184,9 @@ hr:not([size]) {
 }
 
 .image {
-    width: 50vh;
-    padding: 10px;
-    border-radius: 10%;
+    width: 100%;
+    padding: 5px;
+    border-radius: 5%;
 }
 
 @media screen and (max-width: 992px) {
@@ -205,69 +205,13 @@ hr:not([size]) {
 
 /*-------------------- about --------------------*/
 
-/*.container {
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(4, 1fr);
-    width: 100vw;
-    height: 100vh;
-    padding-top: 55px;
-    padding-bottom: 55px;
-  @media screen and (max-width: 60em) {
-    grid-template-rows: repeat(4, 1fr);
-  }
-}
-
-.grid-1 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row: 1;
-  @media screen and (max-width: 60em) {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row: 1;
-  }
-}
-
-.grid-2 {
-    grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row: 1;
-  @media screen and (max-width: 60em) {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row: 2;
-  }
-}
-
-.grid-3 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row: 2;
-  @media screen and (max-width: 60em) {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row: 3;
-  }
-}
-
-.grid-4 {
-    grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row: 2;
-  @media screen and (max-width: 60em) {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row: 4;
-  }
-}*/
-
 .row {
     width: 100%;
-    height: 100%;
+    height: 75%;
     margin:0;
     --bs-gutter-x: 2rem;
     --bs-gutter-y: 2rem;
+    padding: 0 0 50px 0;
 }
 
 .column-1 {
@@ -290,26 +234,23 @@ hr:not([size]) {
     background-color: red;
 }
 
+@media screen and (max-width: 768) {
+    .column-2 {
+        display: none;
+        column-count: 0;   
+    }
+}
+
 .about_image {
     width: 100%;
     margin-top: 5vh;
 }
 
-
-.col-sm-3 {
-    flex: 0 0 auto;
-    width: 15%;
+@media screen and (max-width: 768) {
+    .about_image {
+        display: none;   
+    }
 }
-
-/*.grid-pic {
-    width: 50vh;
-    border-radius: 10%;
-}
-
-.vertical-line {
-    border-left: thick solid #ff0000;
-    height: 50vh;
-}*/
 
 /*-------------------- Form --------------------*/
 
@@ -344,3 +285,49 @@ hr:not([size]) {
     background-color: #484848;
     border-color: #484848;
 }
+
+/*------------test------------------*/
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+    position: absolute;
+  content: '';
+  width: 6px;
+  background-color: black;
+  top: 50px;
+  bottom: 60px;
+  margin-left: 20%;
+}
+
+/* Container around content */
+.container {
+    position: relative;
+    padding: 50px 0 0 50px;
+    min-width: 0px;
+    width: 50%;
+    }
+
+.container-first {
+    padding-top:
+        100px;
+}
+
+/* The circles on the timeline */
+.container::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: white;
+  border: 4px solid #FF9F55;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+  }
