Finish amending 'about.html' css to ensure media queries react correctly to different devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,50 +206,67 @@ hr:not([size]) {
 /*-------------------- about --------------------*/
 
 .row {
-    width: 100%;
-    height: 75%;
     margin:0;
     --bs-gutter-x: 2rem;
-    --bs-gutter-y: 2rem;
-    padding: 0 0 50px 0;
+    height:80vh;
 }
 
 .column-1 {
+    padding-top: 70px;
+}
+
+@media only screen and (min-width: 768px) {
+    .column-1 {
     width:66%;
-    height:100vh;
-    margin-top: 50px;
-    margin-bottom: 65px;
-    background-color: turquoise;
-}
-
-.h1, h1 {
-    padding-top: 50px;
-}
-
-.column-2 {
-    width:34%;
-    height:100vh;
-    margin-top: 50px;
-    margin-bottom: 65px;
-    background-color: red;
-}
-
-@media screen and (max-width: 768) {
-    .column-2 {
-        display: none;
-        column-count: 0;   
     }
 }
 
+@media only screen and (max-width: 768px) {
+    .column-1 {
+    width: 100%;
+    }
+}
+
+.about-title {
+    padding-bottom: 30px;
+}
+
+@media (min-width: 576px) {
+    .col-sm-3 {
+    flex: 0 0 auto;
+    width: 15%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .column-2 {
+    width:34%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .column-2 {
+        display: none; 
+    }
+}
+
+@media only screen and (min-width: 768px) {
 .about_image {
     width: 100%;
-    margin-top: 5vh;
+    position: relative;
+    top:10vh;
+    padding-bottom:60px;
+    }
 }
 
-@media screen and (max-width: 768) {
+@media only screen and (max-width: 768px) {
     .about_image {
-        display: none;   
+        display: none;
     }
+}
+
+.final-about {
+    padding-bottom: 50px;
 }
 
 /*-------------------- Form --------------------*/
