--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,9 @@ body {
     .jumbotron {
         font-size: small;    
     }
+    .my-4 {
+        margin-top:0!important;
+        }
 }
 
 @media screen and (max-width: 576px) {
