Create Audio folder, add OGG audio file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,6 +317,13 @@ a:hover {
     padding-bottom: 50px;
 }
 
+/*-------------------- audio --------------------*/
+
+#audio {
+    position: relative;
+    bottom: 5px;
+}
+
 /*-------------------- contact.html --------------------*/
 
 .form-header {
