Add label to audio in about.html, and update style.css to keep label in line with audio controls

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,8 +319,13 @@ a:hover {
 
 /*-------------------- audio --------------------*/
 
-#audio {
+.audio {
     margin-top: 60px;
+}
+
+.audio_label {
+    display: inline-block;
+    margin-left: 3rem;
 }
 
 /*-------------------- contact.html --------------------*/
